# trabalho_final_IP_gtk

./: .gitignore  README.md  graos.gresource.xml  meson.build
Auxiliar/: Makefile  gen_data_file.c  gen_data_files.c
include/: app.h  appwin.h  carga.h  database.h  item_relatorio_geral.h  item_relatorio_mensal.h  novo_carregamento.h  relatorio_geral.h  relatorio_mensal.h
src/: app.c  appwin.c  carga.c  database.c  item_relatorio_geral.c  item_relatorio_mensal.c  main.c  novo_carregamento.c  relatorio_geral.c  relatorio_mensal.c
ui/: menu.ui  novo_carregamento.ui  relatorio_geral.ui  relatorio_mensal.ui  window.ui
